--- a/src/main/webapp/WEB-INF/templates/layout.xhtml
+++ b/src/main/webapp/WEB-INF/templates/layout.xhtml
@@ -42,9 +42,8 @@
                         outcome="/pages/category.xhtml"
                         icon="pi pi-list"
                 />
-                    <p:submenu label="Productos" icon="pi pi-list">
-                        <p:menuitem value="Lista de Productos" outcome="/pages/producto.xhtml" icon="pi pi-tag"/>
-                    </p:submenu>
+                <p:menuitem value="Lista de Productos" outcome="/pages/producto.xhtml" icon="pi pi-list"/>
+
                 <p:menuitem
                         value="Stock"
                         outcome="/pages/stock.xhtml"
